Name:                snap-api-tutorial
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable snap-api-tutorial
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    MonadCatchIO-transformers >= 0.3.1  && < 0.4,
    aeson                     >= 0.11.2 && < 0.12,
    bytestring                >= 0.10.6 && < 0.11,
    heist                     >= 0.14.1 && < 0.15,
    mtl                       >= 2.2.1  && < 2.3,
    postgresql-simple         >= 0.5.1  && < 0.6,
    snap                      >= 0.14   && < 0.15,
    snap-core                 >= 0.9.8  && < 0.10,
    snap-loader-static        >= 0.9.0  && < 0.10,
    snap-server               >= 0.9.5  && < 0.10,
    snaplet-postgresql-simple >= 0.6.0  && < 0.7,
    text                      >= 1.2.1  && < 1.3,
    time                      >= 1.5.0  && < 1.6,
    xmlhtml                   >= 0.2.3  && < 0.3

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 4.15

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
